# Invasia

./: .gitignore  AGENTS.md  ARCHITECTURE.md  GITHUB_PAGES_SETUP.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  TESTING.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts
.cargo/: config.toml
.github/workflows/: copilot-setup-steps.yml  deploy.yml
e2e/: simulation-performance.spec.ts  wasm-loading.spec.ts
src/components/: Counter.svelte  SimulationTable.svelte
src/pages/: index.astro  simulation.astro
wasm/: Cargo.toml
wasm-counter/: Cargo.toml
wasm-counter/src/: lib.rs
wasm-counter/src/decision_scoring/: README.md  actions.rs  country.rs  luts.rs  scoring.rs  world.rs
wasm/.cargo/: config.toml
wasm/src/: constants.rs  lib.rs  utils.rs
wasm/src/data/: ai_neighbor_builder.rs  ai_state_updater.rs  benchmark_metric_builder.rs  entities.rs  grid_update_builder.rs  mod.rs
wasm/src/decision_scoring/: README.md  country.rs  mod.rs  scoring.rs  world.rs
wasm/src/dependency/: entity_store.rs  mod.rs  performance.rs  snapshots.rs  spatial_grid.rs
wasm/src/logic/: mod.rs  sim_logic.rs
wasm/src/service/: mod.rs  sim_handler.rs
wasm/src/types/: ai_entity.rs  grid_space.rs  metrics.rs  mod.rs  snapshot.rs
