[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly module for Invasia featuring AI simulation and decision scoring system"
repository = "https://github.com/JPrier/Invasia"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["Window", "Performance"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
